# ic10lsp

./: Cargo.toml  Session.vim  build.rs  cspell.json  generate_data.py
data/: batchmodes.txt  constants.txt  enums.txt  instructions_help.txt  instructions_help_paches.json  logictypes.txt  reagentmodes.txt  slotlogictypes.txt  stationpedia.txt
src/: instructions.rs  lib.rs  main.rs  server.rs
