[package]
name = "ic10lsp"
version = "0.7.4"
edition = "2021"

[lib]
name = "ic10lsp_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ic10lsp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]
# default = ["tower-lsp/runtime-agnostic"]

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }
serde_json = "1.0.94"
const-crc32 = "1.3.0"
# tree-sitter-ic10 = "0.5.2"
tree-sitter-ic10 = { git = "https://github.com/Ryex/tree-sitter-ic10.git", branch = "wasm" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tree-sitter = "0.20.10"
tower-lsp = {version = "0.20.0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.26.0", features = ["sync", "macros", "io-util", "rt"] }
tree-sitter-c2rust = "0.20.10"
tower-lsp = {version = "0.20.0", default-features = false, features = ["runtime-agnostic"] }


[build-dependencies]
phf_codegen = "0.11.1"
